feat: add default jvm args for java application plugin